force-app/main/default/objects/Volunteer__c/fields/Assigned_Shelter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Shelter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Shelter</label>
    <referenceTo>Shelter__c</referenceTo>
    <relationshipLabel>Volunteers</relationshipLabel>
    <relationshipName>Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>