force-app/main/default/objects/Volunteer__c/fields/Disaster__c.field-meta.xml
<CustomField>
    <fullName>Disaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disaster</label>
    <referenceTo>Disaster__c</referenceTo>
    <relationshipLabel>Volunteers</relationshipLabel>
    <relationshipName>Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>